--- a/Projects.html
+++ b/Projects.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Data Science Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 
 <body>
     <header>
         <h1>My Data Science Portfolio</h1>
-        <p>Explore my projects and works in the field of Data Science and AI.</p>
+        <p>Explore my projects and works in the field of Data Science.</p>
     </header>
 
     <section class="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>Project 1: Predicting Skill Demand in the Job Market using AI</h3>
-            <p>Develop a machine learning model to predict the demand for specific job skills based on historical job
-                posting data, helping businesses and individuals anticipate skill trends.</p>
-            <a href="project1.html">Learn More</a>
-        </div>
-
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>Project 2: Sales Data Analysis</h3>
+            <h3>Project 1: Sales Data Analysis</h3>
             <p>An exploratory analysis of sales data for a company, including visualizations and insights.</p>
             <a href="project1.html">Learn More</a>
         </div>
 
         <div class="project">
-            <h3>Project 3: Customer Churn Prediction</h3>
+            <h3>Project 2: Customer Churn Prediction</h3>
             <p>Utilizing machine learning models to predict the likelihood of customer churn.</p>
             <a href="project2.html">Learn More</a>
         </div>
@@ -33,6 +31,9 @@
         <!-- Add more projects here -->
     </section>
 
+    <footer>
+        <p>&copy; 2023 - All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
