--- a/index.html
+++ b/index.html
@@ -4,25 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Name - My Data Science Portfolio</title>
+    <title>My Data Science Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        <h1>Project Name</h1>
+        <h1>My Data Science Portfolio</h1>
+        <p>Explore my projects and works in the field of Data Science.</p>
     </header>
 
-    <section class="project-details">
-        <!-- Project details, methodologies, tools, outcomes, etc. -->
+    <section class="about">
+        <!-- About Me Section -->
     </section>
 
-    <section class="project-code">
-        <!-- Code snippets or demos -->
+    <section class="projects">
+        <object data="Projects.html" width="100%" height="800px"></object>
     </section>
 
-    <section class="project-visuals">
-        <!-- Visualizations or screenshots -->
+    <section class="skills">
+        <!-- Skills Matrix or Chart Section -->
+    </section>
+
+    <section class="blog">
+        <!-- Blog or Articles Section -->
+    </section>
+
+    <section class="contact">
+        <!-- Contact Form Section -->
     </section>
 
     <footer>
