--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-        <h1>My Data Science Portfolio</h1>
-        <p>Explore my projects and works in the field of Data Science.</p>
+        <h1>My Portfolio</h1>
+        <p>Explore my projects and works.</p>
     </header>
 
     <section class="about">
