--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </section>
 
     <section class="skills">
-        <!-- Skills Matrix or Chart Section -->
+        <object data="skills.html" width="100%" height="800px"></object>
     </section>
 
     <section class="blog">
