--- a/Projects.html
+++ b/Projects.html
@@ -14,7 +14,7 @@
         <p>Explore my projects and works in the field of Data Science and AI.</p>
     </header>
 
-    <section class="projects">
+    <section class="">
 
         <div class="project">
             <h3>Project 1: Predicting Skill Demand in the Job Market using AI</h3>
