--- a/skills.html
+++ b/skills.html
@@ -18,7 +18,7 @@
     <section class="projects">
 
         <div class="skills">
-            <h3></h3>
+            <h3>Skills</h3>
             <a href="skills_list.html">My Skills</a>
         </div>
 
