--- a/skills.html
+++ b/skills.html
@@ -15,9 +15,9 @@
             experiences.</p>
     </header>
 
-    <section class="projects">
+    <section class="Skills">
 
-        <div class="skills">
+        <div class="">
             <h3>Skills</h3>
             <a href="skills_list.html">My Skills</a>
         </div>
