--- a/Projects.html
+++ b/Projects.html
@@ -14,22 +14,22 @@
         <p>Explore my projects and works in the field of Data Science and AI.</p>
     </header>
 
-    <section class="">
+    <section class="Projects">
 
-        <div class="project">
+        <div class="">
             <h3>Project 1: Predicting Skill Demand in the Job Market using AI</h3>
             <p>Develop a machine learning model to predict the demand for specific job skills based on historical job
                 posting data, helping businesses and individuals anticipate skill trends.</p>
             <a href="project1.html">Learn More</a>
         </div>
 
-        <div class="project">
+        <div class="">
             <h3>Project 2: Sales Data Analysis</h3>
             <p>An exploratory analysis of sales data for a company, including visualizations and insights.</p>
             <a href="project2.html">Learn More</a>
         </div>
 
-        <div class="project">
+        <div class="">
             <h3>Project 3: Customer Churn Prediction</h3>
             <p>Utilizing machine learning models to predict the likelihood of customer churn.</p>
             <a href="project3.html">Learn More</a>
