--- a/index.html
+++ b/index.html
@@ -9,28 +9,38 @@
 </head>
 
 <body>
+    <nav>
+        <ul class="navigation">
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#blog">Blog</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
     <header>
         <h1>My Portfolio</h1>
         <p>Explore my projects and works.</p>
     </header>
 
-    <section class="about">
+    <section id="about" class="about">
         <!-- About Me Section -->
     </section>
 
-    <section class="projects">
+    <section id="projects" class="projects">
         <object data="Projects.html" width="100%" height="800px"></object>
     </section>
 
-    <section class="skills">
+    <section id="skills" class="skills">
         <object data="skills.html" width="100%" height="800px"></object>
     </section>
 
-    <section class="blog">
+    <section id="blog" class="blog">
         <!-- Blog or Articles Section -->
     </section>
 
-    <section class="contact">
+    <section id="contact" class="contact">
         <!-- Contact Form Section -->
     </section>
 
