--- a/Projects.html
+++ b/Projects.html
@@ -16,7 +16,7 @@
 
     <section class="Projects">
 
-        <div class=" ">
+        <div class="Projects">
             <h3>Project 1: Predicting Skill Demand in the Job Market using AI</h3>
             <p>Develop a machine learning model to predict the demand for specific job skills based on historical job
                 posting data, helping businesses and individuals anticipate skill trends.</p>
