--- a/skills.html
+++ b/skills.html
@@ -15,7 +15,7 @@
     </header>
 
     <section class="Skills">
-        <div class="">
+        <div class="Skills">
             <h3></h3>
             <p>Detailed information regarding my expertise, relevant tools and technologies, past projects, and other
                 experiences.</p>
