--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 </head>
 
 <body>
+    <header>
+        <h1>My Portfolio</h1>
+        <p>Explore my projects and works.</p>
+    </header>
+
     <nav>
-        <ul class="navigation">
+        <ul class="menu">
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
@@ -19,28 +24,23 @@
         </ul>
     </nav>
 
-    <header>
-        <h1>My Portfolio</h1>
-        <p>Explore my projects and works.</p>
-    </header>
-
-    <section id="about" class="about">
+    <section class="about" id="about">
         <!-- About Me Section -->
     </section>
 
-    <section id="projects" class="projects">
+    <section class="projects" id="projects">
         <object data="Projects.html" width="100%" height="800px"></object>
     </section>
 
-    <section id="skills" class="skills">
+    <section class="skills" id="skills">
         <object data="skills.html" width="100%" height="800px"></object>
     </section>
 
-    <section id="blog" class="blog">
+    <section class="blog" id="blog">
         <!-- Blog or Articles Section -->
     </section>
 
-    <section id="contact" class="contact">
+    <section class="contact" id="contact">
         <!-- Contact Form Section -->
     </section>
 
