--- a/index.html
+++ b/index.html
@@ -9,38 +9,37 @@
 </head>
 
 <body>
-    <header>
+    <header class="menu">
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
         <h1>My Portfolio</h1>
         <p>Explore my projects and works.</p>
     </header>
 
-    <nav>
-        <ul class="menu">
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-
-    <section class="about" id="about">
+    <section class="about">
         <!-- About Me Section -->
     </section>
 
-    <section class="projects" id="projects">
+    <section class="projects">
         <object data="Projects.html" width="100%" height="800px"></object>
     </section>
 
-    <section class="skills" id="skills">
+    <section class="skills">
         <object data="skills.html" width="100%" height="800px"></object>
     </section>
 
-    <section class="blog" id="blog">
+    <section class="blog">
         <!-- Blog or Articles Section -->
     </section>
 
-    <section class="contact" id="contact">
+    <section class="contact">
         <!-- Contact Form Section -->
     </section>
 
