--- a/Projects.html
+++ b/Projects.html
@@ -23,13 +23,13 @@
             <a href="project1.html">Learn More</a>
         </div>
 
-        <div class="">
+        <div class="Projects">
             <h3>Project 2: Sales Data Analysis</h3>
             <p>An exploratory analysis of sales data for a company, including visualizations and insights.</p>
             <a href="project2.html">Learn More</a>
         </div>
 
-        <div class="">
+        <div class="Projects">
             <h3>Project 3: Customer Churn Prediction</h3>
             <p>Utilizing machine learning models to predict the likelihood of customer churn.</p>
             <a href="project3.html">Learn More</a>
