--- a/skills.html
+++ b/skills.html
@@ -21,7 +21,12 @@
             <a href="skills_list.html">My Skills</a>
         </div>
 
-        <!-- Add more projects here -->
+        <h2> </h2>
+        <div class="Project">
+            <h3> Skills </h3>
+            <p>Click here</p>
+            <a href="skills_list.html">My Skills</a>
+        </div>
     </section>
 </body>
 
