--- a/index.html
+++ b/index.html
@@ -4,105 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Awesome Website</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">My Website</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#about">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#services">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#portfolio">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <header class="hero bg-primary text-white text-center py-5">
-        <h1 class="display-4">Welcome to My Awesome Website</h1>
-        <p class="lead">Explore our services and portfolio to see what we can offer you.</p>
+    <header>
+        <h1>My Portfolio</h1>
+        <p>Explore my projects and works in the field of Data Science.</p>
     </header>
 
-    <section id="about" class="py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h2>About Us</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et odio id sapien facilisis
-                        gravida.</p>
-                </div>
-                <div class="col-md-6">
-                    <img src="https://via.placeholder.com/400" alt="About Us" class="img-fluid">
-                </div>
-            </div>
-        </div>
+    <section class="about">
+        <h2>About Me</h2>
+        <p>This is where you can introduce yourself and provide some background information.</p>
     </section>
 
-    <section id="services" class="bg-light py-5">
-        <div class="container">
-            <h2 class="text-center">Our Services</h2>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <h5 class="card-title">Web Development</h5>
-                            <p class="card-text">We create stunning websites that are both functional and visually
-                                appealing.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <h5 class="card-title">Graphic Design</h5>
-                            <p class="card-text">Our skilled designers can bring your ideas to life through creative
-                                and captivating designs.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <h5 class="card-title">Digital Marketing</h5>
-                            <p class="card-text">Boost your online presence with our effective digital marketing
-                                strategies.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <section class="projects">
+        <object data="Projects.html" width="100%" height="800px"></object>
     </section>
 
-    <section id="portfolio" class="py-5">
-        <div class="container">
-            <h2 class="text-center">Our Portfolio</h2>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <img src="https://via.placeholder.com/400" alt="Project 1" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Project 1</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <img src="https://via.placeholder.com/400" alt="Project 2" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Project 2</h5
+    <section class="skills">
+        <object data="skills.html" width="100%" height="800px"></object>
+    </section>
+
+    <section class="blog">
+        <h2>Blog</h2>
+        <p>Share your thoughts, insights, and articles related to Data Science and AI.</p>
+    </section>
+
+    <section class="contact">
+        <h2>Contact Me</h2>
+        <p>Provide a way for visitors to get in touch with you.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2023 - All rights reserved.</p>
+    </footer>
+</body>
+
+</html>
