--- a/Projects.html
+++ b/Projects.html
@@ -15,7 +15,7 @@
     </header>
 
     <section class="projects">
-        <h2> </h2>
+        <h2>Projects </h2>
         <div class="Project">
             <h3>Project 1: Predicting Skill Demand in the Job Market using AI</h3>
             <p>Develop a machine learning model to predict the demand for specific job skills based on historical job
