--- a/skills.html
+++ b/skills.html
@@ -17,7 +17,7 @@
 
     <section class="Skills">
 
-        <h2> </h2>
+        <h2> Skills </h2>
         <div class="Project">
             <h3> </h3>
             <p>Click here</p>
