--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>My Portfolio</h1>
-        <p>Explore my projects and works in the field of Data Science.</p>
+        <p>Explore my projects and works.</p>
     </header>
 
 
