--- a/skills.html
+++ b/skills.html
@@ -7,6 +7,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Top Skills</title>
+        <h1>My Top Skills</h1>
         <link rel="stylesheet" href="styles.css"> <!-- Include your main stylesheet here -->
         <p>Detailed information regarding my expertise, relevant tools and technologies, past projects, and other
             experiences.</p>
