--- a/Projects.html
+++ b/Projects.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
+<body>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Data Science Projects</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Include your main stylesheet here -->
-</head>
-
-<body>
+    <link rel="stylesheet" href="styles.css">
     <header>
         <h1>My Data Science Projects</h1>
         <p>Explore my projects and works in the field of Data Science and AI.</p>
