--- a/skills.html
+++ b/skills.html
@@ -5,7 +5,7 @@
         <title>My Top Skills</title>
         <h1>My Top Skills</h1>
         <link rel="stylesheet" href="styles.css"> <!-- Include your main stylesheet here -->
-        <p>Detailed information regarding my expertise, relevant tools and technologies, past projects, and other
+        <p>Detailed information regarding my expertise, relevant tools and technologies, and other
             experiences.</p>
     </header>
 
