--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav class="navbar">
         <ul class="link-group">
-            <li class="link active"><a href="index2.html">home</a></li>
+            <li class="link active"><a href="index.html">home</a></li>
             <li class="link"><a href="project.html">projects</a></li>
             <li class="link"><a href="about.html">about</a></li>
             <li class="link"><a href="contact.html">contact</a></li>
