contact message configuration

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         </ul>
     </nav>
     <section id="contact" class="contact-section active">
-        <form class="contact-form">
+        <form class="contact-form" action="submit.php" method="POST">
             <input type="text" name="name" id="name" autocomplete="off" placeholder="name">
             <input type="text" name="email" id="email" autocomplete="off" placeholder="email">
             <textarea name="msg" id="msg" placeholder="message" autocomplete="off"></textarea>
