--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             <li class="link"><a href="index.html">home</a></li>
             <li class="link"><a href="project.html">projects</a></li>
             <li class="link"><a href="about.html">about</a></li>
-            <li class="link"><a href="contact.html">contact</a></li>
+            <!-- <li class="link"><a href="contact.html">contact</a></li> -->
         </ul>
     </nav>
 
