--- a/about.html
+++ b/about.html
@@ -10,49 +10,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_mobile.css">
     <style>
+        /* Add CSS for mobile version */
         @media (max-width: 600px) {
             .link-group {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-            }
-
-            body,
-            html {
-                margin: 0;
-                padding: 0;
-                height: 100%;
-            }
-
-            .navbar {
-                height: 10%;
-            }
-
-            .home-section,
-            .project-section,
-            .about-section {
-                height: 30%;
-                /* Adjust as needed */
-                width: 100%;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                text-align: center;
-            }
-
-            .home-img {
-                max-width: 100%;
-                max-height: 100%;
-                object-fit: cover;
-            }
-
-            footer {
-                height: 10%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                background-color: #f0f0f0;
             }
         }
     </style>
