--- a/project.html
+++ b/project.html
@@ -8,12 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="style_mobile.css"> -->
+    <link rel="stylesheet" href="style_mobile.css">
     <style>
         @media (max-width: 600px) {
             .link-group {
                 display: flex;
-                flex-direction: column;
+                flex-direction: row;
                 align-items: center;
             }
         }
