--- a/about.html
+++ b/about.html
@@ -74,7 +74,8 @@
                     <img src="python.png" class="skill-img" alt="">
                     <!-- <div class="skill-level">95%</div> -->
                     <h1 class="skill-name">python</h1>
-                    <p class="skill-info">Jupyter Notebook, TensorFlow, Keras, PySpark, Scikit-Learn, Pandas, NumPy
+                    <p class="skill-info">Jupyter Notebook, Selenium, TensorFlow, Keras, PySpark, Scikit-Learn, Pandas,
+                        NumPy
                     </p>
                 </div>
                 <div class="skill-card">
