--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
                     <img src="powerbi.png" class="skill-img" alt="">
                     <!-- <div class="skill-level">95%</div> -->
                     <h1 class="skill-name">Power BI</h1>
-                    <p class="skill-info">Awesome Dashboard
+                    <p class="skill-info">Awesome Dashboard, Power Query
                     </p>
                 </div>
                 <div class="skill-card">
